--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@onn/ddl-to-gql",
+  "name": "@onn/ddl-to-gql-example",
   "version": "0.0.1",
   "author": "David Hardy @ Onn Software",
   "description": "Convert a SQL DDL to a GraphQL implementation with all relations.",
@@ -19,12 +19,6 @@
     "DDL"
   ],
   "scripts": {
-    "install:app": "npm --prefix app install",
-    "install:example": "npm --prefix example install",
-    "postinstall": "npm run install:app && npm run install:example",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^2.8.4"
+    "docker:up": "docker compose up"
   }
 }
