--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,38 @@
     "DDL"
   ],
   "scripts": {
-    "docker:up": "docker compose up"
+    "docker:up": "docker compose up",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts",
+    "start": "ts-node src/main.ts",
+    "codegen:sql": "ts-node sql-codegen.ts",
+    "codegen:gql": "graphql-codegen --config server-codegen.ts",
+    "codegen": "npm run codegen:sql && npm run codegen:gql"
+  },
+  "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^7.5.16",
+    "@graphql-tools/load": "^7.8.12",
+    "@graphql-tools/schema": "^9.0.16",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "graphql-yoga": "^3.5.1",
+    "knex": "^2.4.2",
+    "mysql2": "^3.1.2"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^3.0.0",
+    "@graphql-codegen/client-preset": "^2.0.0",
+    "@graphql-codegen/typescript": "^3.0.0",
+    "@graphql-codegen/typescript-resolvers": "^3.0.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.33.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   }
 }
