--- a/app/package.json
+++ b/app/package.json
@@ -26,5 +26,8 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "commander": "^10.0.0"
   }
 }
