--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onn-software/ddl-to-gql",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "David Hardy @ Onn Software",
   "description": "Convert a SQL DDL to a GraphQL implementation with all relations.",
   "bugs": {
@@ -26,7 +26,7 @@
     "DDL"
   ],
   "scripts": {
-    "build": "tsc -p ."
+    "build": "tsc -p . && cp ../README.md README.md"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
