--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onn-software/ddl-to-gql",
-  "version": "0.0.2",
+  "version": "0.0.7",
   "author": "David Hardy @ Onn Software",
   "description": "Convert a SQL DDL to a GraphQL implementation with all relations.",
   "bugs": {
@@ -10,6 +10,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": "dist/index.js",
   "files": [
     "dist",
     "README.md"
@@ -26,7 +27,8 @@
     "DDL"
   ],
   "scripts": {
-    "build": "tsc -p . && cp ../README.md README.md"
+    "build": "tsc -p . && cp ../README.md README.md",
+    "release": "npm publish"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
