Extended readme for advanced options

--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "DDL"
   ],
   "scripts": {
+    "run": "ts-node src/index.ts",
     "build": "tsc -p . && cp ../README.md README.md",
     "release": "npm publish"
   },
